Bug Fix on mobile view

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -95,7 +95,7 @@ color: var(--color-light);
 
   .about-me{
     width: 65%;
-    margin: 0 auto 3rem;
+    margin: 0 0 3rem;
   }
    
   .about-cards{
